# gameoflife

./: Cargo.toml
derives/: Cargo.toml
derives/src/: lib.rs
src/: app.rs  main.rs
src/canvas/: canvas.rs  cell.rs  field.rs  mod.rs
src/lib/: enum_length.rs  mod.rs
