[package]
name = "game_of_life_egui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = "0.22.0"
egui = "0.22.0"
rand = "0.8.5"
derives = { path = "./derives" }
colors-transform = "0.2.11"
noise = "0.8.2"
